<resources>
    <string name="app_name">NeoSTORE</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="current_password">Current Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no_account">I do not have account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gendar">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone Number</string>
    <string name="terms_condition">I agree terms and conditions</string>
    <string name="sign_up">Signup</string>
    <string name="reset_password">Reset Password</string>
    <string name="sofas">Sofas</string>
    <string name="Cupboards">Cupboards</string>
    <string name="buy">Buy Now</string>
    <string name="rate">Rate</string>
    <string name="rate_now">Rate Now</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Birthday</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="add_to_cart">Add  To Cart</string>
    <string name="order_now">Order Now</string>
    <string name="save_address">Save Address</string>


</resources>
