<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="5dp"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context="com.example.webwerks.neostore.SignUp.SignUpActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/app_name"
        android:fontFamily="@font/gothambold"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorAccent"
        android:textSize="115px" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:hint="@string/first_name"
        android:fontFamily="@font/gothamlight"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:hint="@string/last_name"
        android:fontFamily="@font/gothamlight"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:fontFamily="@font/gothamlight"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:fontFamily="@font/gothamlight"

        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <EditText
        android:id="@+id/Confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:fontFamily="@font/gothamlight"

        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
      >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/gendar"
            android:fontFamily="@font/gothambook"

            android:textColor="@color/colorAccent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:checked="true"
                android:fontFamily="@font/gothambook"

                android:text="@string/male"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent" />

            <RadioButton
                android:id="@+id/radiofemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothambook"

                android:text="@string/female"
                android:buttonTint="@color/colorAccent"
                android:textColor="@color/colorAccent" />

        </RadioGroup>


    </LinearLayout>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:hint="@string/phone"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:fontFamily="@font/gothamlight"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />

    <CheckBox
        android:id="@+id/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:fontFamily="@font/gothamlight"
        android:layout_marginTop="15dp"
        android:text="@string/terms_condition"
        android:textColor="@color/colorAccent"
        android:buttonTint="@color/colorAccent"/>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:text="@string/sign_up"
        android:fontFamily="@font/gothambook"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="50px" />
</LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
