<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2.5"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="40dp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/gothambold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="100px" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:fontFamily="@font/gothamlight"
        android:gravity="center"
        android:hint="@string/username"
        android:text="pri@kadam.com"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent" />


    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_white"
        android:fontFamily="@font/gothambook"
        android:text="@string/reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="50px" />

</LinearLayout>
