<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context="com.example.webwerks.neostore.myAccount.MyAccountFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="5dp">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="400px"
            android:layout_height="400px"
            android:layout_gravity="center"
            android:src="@drawable/shopping"
            app:civ_border_color="@color/colorAccent"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/account"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/first_name"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/account"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/last_name"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/email"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:padding="7dp"

            android:text="@string/email"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/phone"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:inputType="number"
            android:padding="7dp"
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/birthday"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/birthday"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="16sp" />


        <Button
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/gothammedium"
            android:text="@string/edit_profile"
            android:textAlignment="center"

            android:textColor="@color/colorPrimary"
            android:textSize="40px" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/gothammedium"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40px"
            android:visibility="gone" />

    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:fontFamily="@font/gothammedium"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary" />


    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone"
        android:theme="@style/AppTheme.WhiteAccent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
