<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.example.webwerks.neostore.login.LoginActivity">
    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />
    <LinearLayout
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/gothambold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="100px" />

        <EditText
            android:id="@+id/current_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/current_password"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/Confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"

            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />
        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/gothambook"
            android:text="@string/reset_password"
            android:textColor="@color/colorPrimary"
            android:textSize="40px"
          />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone"
        android:theme="@style/AppTheme.WhiteAccent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
