<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="5"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.example.webwerks.neostore.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/gothambold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="100px" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:drawableLeft="@android:drawable/sym_action_email"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/username"
            android:text="abcde@gmail.com"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/border"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:fontFamily="@font/gothamlight"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="qwerty"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/gothambold"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="50px" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/gothammedium"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/colorAccent"
            android:textSize="40px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.5"
        android:layout_alignParentBottom="true"
        android:paddingLeft="40dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1.9"
            android:fontFamily="@font/gothammedium"
            android:gravity="start|center"
            android:text="@string/no_account"
            android:textAllCaps="true"

            android:textColor="@color/colorAccent"
            android:textSize="30px" />

        <ImageView
            android:id="@+id/img_signUp"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.2"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/gothammedium"
            android:src="@android:drawable/ic_menu_add" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
