<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.webwerks.neostore.ProductDetail.ProductDetailActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:foregroundGravity="left|center_vertical"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/search"
                android:fontFamily="@font/gothambold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/gothammedium"
            android:text="Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="58px" />

        <TextView
            android:id="@+id/txt_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/gothambook"
            android:text="Category"
            android:textSize="48px" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothammedium"
                android:text="Make"
                android:layout_alignParentLeft="true"
                android:textSize="40px"

                />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="80dp"
                android:isIndicator="true"
                android:numStars="5"
                android:layout_alignParentRight="true"
                android:theme="@style/RatingBar" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txt_product_price"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:fontFamily="@font/gothammedium"
                    android:text="Product Price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="58px" />

                <ImageView
                    android:id="@+id/share"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:src="@drawable/share" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:scaleType="fitXY" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rec_pro_images">

            </android.support.v7.widget.RecyclerView>

            <TextView
               android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gothammedium"
                android:textColor="@color/colorAccent_sec"
                android:text="Description"
                android:layout_margin="5dp"
                android:textAllCaps="true"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fontFamily="@font/gothammedium"
                android:maxLines="10"


                android:layout_margin="5dp"
                android:textColor="@color/colorAccent_sec_light"
                android:text="Description"

                android:textSize="30px" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="8dp"
        >

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corners_primary"
            android:fontFamily="@font/gothambook"
            android:text="@string/buy"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_corners_gray"

            android:fontFamily="@font/gothambook"
            android:text="@string/rate"
            android:textColor="@color/colorAccent_sec" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="50dp"
        android:visibility="gone"
        android:theme="@style/AppTheme.Primary"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
